# 2025-p1-NEMO-ZXR

./: README.md  pyproject.toml
todo/: __init__.py  endpoints.http
todo/views/: routes.py
