[project]
name = "practical01"
version = "0.1.0"
description = ""
authors = [
    {name = "Sherry",email = "81247430+NEMO-ZXR@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
flask = "^3.1.0"
